@@ -10,6 +10,9 @@ What's New in Python 3.2.2?
 Core and Builtins
 -----------------
 
+- Issue #12475: Prevent generators from leaking their exception state into the
+  callers frame as they return for the last time.
+
 Library
 -------
 
